Update skills and tools

--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,7 @@ body {
 .skills__text {
     color: var(--secondary-text-color);
     text-align: justify;
+    padding-left: 20px;
 }
 .experiences {
     flex: 1 1 60%;
