--- a/styles.css
+++ b/styles.css
@@ -198,10 +198,9 @@ body {
 }
 
 .experiences__company-project-role {
-    color: var(--durability-text-color);
+    color: var(--primary-text-color);
     text-align: left;
     margin-bottom: 10px;
-    font-size: 15px;
 }
 
 .experiences__company-project-name {
@@ -227,6 +226,10 @@ body {
     color: var(--secondary-text-color);
     text-align: left;
     margin-bottom: 20px;
+}
+
+.additional-info__education-university {
+    margin-bottom: 20px; 
 }
 
 .additional-info__education-university-durability {
