--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
     --secondary-text-color: #5c5c62;
     --durability-text-color: #6a737d9c;
     --icon-color: #6a737d;
-    --border-color: #ff9a0045;
-    --text-decoration-color: #ff9a00;
+    --border-color: #0f4e167a;
+    --text-decoration-color: #093f2cbb;
 }
 
 .container {
